RESOLVED FIXED117747
REGRESSION(r147602): Search text field doesn't render selection when it has some :focus rules
https://bugs.webkit.org/show_bug.cgi?id=117747
Summary REGRESSION(r147602): Search text field doesn't render selection when it has s...
Ryosuke Niwa
Reported 2013-06-18 12:08:18 PDT
Merge https://chromium.googlesource.com/chromium/blink/+/7ff656c8239ce3b125246abcc8b149a603fcff28 With a test case: <!DOCTYPE html> <html> <body> <style> input[type="search"]:focus { border:1px solid #4d90fe; } input[type="search"] { -webkit-appearance: textfield; } </style> <input value="foo bar " type="search"> </body> </html>
Attachments
Patch (3.92 KB, patch)
2013-06-18 13:28 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-06-18 13:28:38 PDT
Kent Tamura
Comment 2 2013-06-18 13:51:28 PDT
Comment on attachment 204936 [details] Patch ok
WebKit Commit Bot
Comment 3 2013-06-18 14:24:11 PDT
The commit-queue encountered the following flaky tests while processing attachment 204936 [details]: media/track/media-element-enqueue-event-crash.html bug 117756 (author: eric.carlson@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2013-06-18 14:25:29 PDT
Comment on attachment 204936 [details] Patch Clearing flags on attachment: 204936 Committed r151695: <http://trac.webkit.org/changeset/151695>
WebKit Commit Bot
Comment 5 2013-06-18 14:25:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.